--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,17 +8,34 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+# Paleta usada (hex -> tmux 256 colors aproximado):
+# #3c3836 -> colour237 (fundo status)
+# #ebdbb2 -> colour223 (texto padrão)
+# #fb4934 -> colour160 (vermelho forte)
+# #b8bb26 -> colour142 (verde)
+# #fabd2f -> colour214 (amarelo)
+# #8ec07c -> colour108 (cyan-esverdeado)
+
+# Status background: dark gray #3c3836
 set -g status-bg '#1c1c1c'
+# Status foreground: light beige #ebdbb2
 set -g status-fg colour223
 
+# Status na parte inferior
 set -g status-position bottom
 
+# Justificar o status no centro
 set -g status-justify absolute-centre
 
+# Indicador de prefixo (PREFIX) em vermelho forte #fb4934 (colour160)
+# Nome da sessão em verde #b8bb26 (colour142)
 set -g status-left-length 20
 set -g status-left '#[fg=#ebdbb2] [#S] #[default]'
 
+# Status central: número da janela e nome em cyan esverdeado #8ec07c (colour108)
 set -g window-status-format ' #[fg=#7c6f64 ]#I:#W #[default]'
+# Janela atual: fundo igual ao status-bg #3c3836 (colour237), texto padrão #ebdbb2 (colour223), em negrito
 set -g window-status-current-format ' #[bg=#1c1c1c,fg=colour223,bold]#I:#W #[default]'
 
+# Status direito: data e hora em amarelo #fabd2f (colour214)
 set -g status-right '#[fg=#ebdbb2]%Y-%m-%d %H:%M #[default]'
