--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,3 +1,30 @@
+
+font_family      JetBrainsMonoNL NF
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+font_size 13.0
+
+cursor_trail 3
+cursor_trail_decay 0.1 0.4
+
+clear_all_shortcuts		yes
+map ctrl+shift+c				copy_to_clipboard
+map ctrl+shift+v				paste_from_clipboard
+map ctrl+equal		      change_font_size all +1.0
+map ctrl+minus			    change_font_size all -1.0
+map ctrl+0		         change_font_size all 0
+map ctrl+shift+,       load_config_file
+
+visual_bell_duration 0.0
+
+window_padding_width 8
+
+hide_window_decorations yes
+
+background_opacity 1.0
+background_blur 30
+
 # Based on https://github.com/morhetz/gruvbox by morhetz <morhetz@gmail.com>
 # Adapted to kitty by wdomitrz <witekdomitrz@gmail.com>
 
