--- a/.config/sway/config
+++ b/.config/sway/config
@@ -7,7 +7,7 @@ set $alt Mod1
 
 set $scripts ~/.config/sway/scripts
 
-set $terminal alacritty
+set $terminal kitty
 
 # # Minimal Theme
 # set $fg #ffffff
