--- a/.config/i3/config
+++ b/.config/i3/config
@@ -5,7 +5,7 @@
 set $super Mod4
 set $alt Mod1
 
-set $scripts ~/.config/sway/scripts
+set $scripts ~/.config/i3/scripts
 
 set $terminal kitty
 
@@ -61,9 +61,9 @@ smart_gaps off
 font pango:Jetbrains Mono Nerd Font 8
 
 # Autostart
-# exec --no-startup-id dex --autostart --environment i3
-# exec --no-startup-id  xrandr --output HDMI-1-0 --mode 1920x1080 --left-of eDP-1
-# exec --no-startup-id  nitrogen --restore
+exec --no-startup-id dex --autostart --environment i3
+exec --no-startup-id  xrandr --output HDMI-1-0 --mode 1920x1080 --left-of eDP-1
+exec --no-startup-id  nitrogen --restore
 
 # Audio
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
@@ -173,14 +173,14 @@ bindsym $super+Shift+9 move container to workspace number 9
 bindsym $super+Shift+0 move container to workspace number 10
 
 # reload the configuration file
-bindsym $super+Shift+c swaymsg reload
+bindsym $super+Shift+c i3-msg reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $super+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $super+Shift+q exec i3-msg exit
 
 bar {
-  status_command i3status -c ~/.config/sway/i3status/status
+  status_command i3status -c ~/.config/i3/i3status/status
     position top
     font pango:Jetbrains Mono Nerd Font 8
     tray_output none
@@ -200,19 +200,19 @@ bar {
 # Sway Config
 
 # Background 
-output HDMI-A-1 mode 1920x1080 pos 0 0
-output eDP-1 mode 1920x1080 pos 1920 0
-
-exec --no-startup-id swaybg -i ~/Imagens/wallpapergruvbox.jpg
-
-# Touchpad config
-input "type:touchpad" {
-    tap enabled
-    natural_scroll enabled
-}
-
-input "type:keyboard" {
-    xkb_layout us,br
-    xkb_variant intl,
-    xkb_options grp:win_space_toggle
-}
+# output HDMI-A-1 mode 1920x1080 pos 0 0
+# output eDP-1 mode 1920x1080 pos 1920 0
+#
+# exec --no-startup-id swaybg -i ~/Imagens/wallpapergruvbox.jpg
+#
+# # Touchpad config
+# input "type:touchpad" {
+#     tap enabled
+#     natural_scroll enabled
+# }
+#
+# input "type:keyboard" {
+#     xkb_layout us,br
+#     xkb_variant intl,
+#     xkb_options grp:win_space_toggle
+# }
