--- a/.config/i3/scripts/networkmenu_config.ini
+++ b/.config/i3/scripts/networkmenu_config.ini
@@ -1,7 +1,7 @@
 ## Copyright (C) 2020-2024 Aditya Shakya <adi1090x@gmail.com>
 
 [dmenu]
-dmenu_command = rofi -dmenu
+dmenu_command = rofi -dmenu -theme ~/.config/i3/rofi/config.rasi
 ; dmenu_command = rofi -dmenu 
 # # Note that dmenu_command can contain arguments as well like `rofi -width 30`
 # # Rofi and dmenu are set to case insensitive by default `-i`
