--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,13 +8,8 @@ font_size 13.0
 cursor_trail 3
 cursor_trail_decay 0.1 0.4
 
-clear_all_shortcuts		yes
-map ctrl+shift+c				copy_to_clipboard
-map ctrl+shift+v				paste_from_clipboard
-map ctrl+equal		      change_font_size all +1.0
-map ctrl+minus			    change_font_size all -1.0
-map ctrl+0		         change_font_size all 0
-map ctrl+shift+,       load_config_file
+# clear_all_shortcuts		yes
+
 
 visual_bell_duration 0.0
 
