--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 unbind C-b
 set-option -g prefix C-s
+set-option -g prefix2 M-p
 bind-key C-s send-prefix
 unbind r
 bind r source-file ~/.tmux.conf
@@ -18,7 +19,7 @@ set-option -g renumber-windows on
 set -g status-bg '#1c1c1c'
 set -g status-fg colour223
 
-set -g status-position bottom
+set -g status-position top
 
 set -g status-justify absolute-centre
 
