--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,19 +2,20 @@ unbind C-b
 set-option -g prefix C-s
 set-option -g prefix2 M-p
 bind-key C-s send-prefix
-unbind r
-bind r source-file ~/.tmux.conf
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-# #3c3836 
-# #ebdbb2 
-# #fb4934 
-# #b8bb26 
-# #fabd2f 
-# #8ec07c 
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 set -g status-bg '#1c1c1c'
 set -g status-fg colour223
