--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,7 +1,7 @@
 unbind C-b
-set-option -g prefix C-s
-set-option -g prefix2 M-p
-bind-key C-s send-prefix
+set-option -g prefix M-p
+bind-key M-p send-prefix
+
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
@@ -16,6 +16,8 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+bind x kill-pane
 
 set -g status-bg '#1c1c1c'
 set -g status-fg colour223
