--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,7 +19,7 @@ bind l select-pane -R
 
 bind x kill-pane
 
-set -g status-bg '#1c1c1c'
+set -g status-bg '#282828'
 set -g status-fg colour223
 
 set -g status-position top
@@ -30,7 +30,7 @@ set -g status-left-length 20
 set -g status-left '#[fg=#ebdbb2] [#S] #[default]'
 
 set -g window-status-format ' #[fg=#7c6f64 ]#I:#W #[default]'
-set -g window-status-current-format ' #[bg=#1c1c1c,fg=colour223,bold]#I:#W #[default]'
+set -g window-status-current-format ' #[bg=#282828,fg=colour223,bold]#I:#W #[default]'
 
 set -g status-right '#[fg=#ebdbb2]%Y-%m-%d %H:%M #[default]'
 
